--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/banco
 spring.datasource.url=jdbc:h2:mem:banco
 spring.datasource.username= sa
 spring.datasource.password=
